--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="page-header">
+      <header class="header">
         <h1>Etch-a-Sketch</h1>
       </header>
-      <main class="page-main">
-        
+      <main class="main">
+        <div class="settings">
+
+        </div>
+        <div class="grid">
+          
+        </div>
       </main>
     </div>
   </body>
