dynamic grid creation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Etch-a-Sketch</title>
     <script src="eas.js" defer></script>
-    <link rel="stylesheet" href="eas.css">
+    <link rel="stylesheet" href="eas.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -12,11 +12,11 @@
         <h1>Etch-a-Sketch</h1>
       </header>
       <main class="main">
-        <div class="settings">
+        <div class="settings"></div>
+        <div class="grid-wrapper">
+          <div class="grid-container">
 
-        </div>
-        <div class="grid">
-          
+          </div>
         </div>
       </main>
     </div>
