--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             <input type="range" min="16" max="60" value="16" class="slider" id="slider">
             <p>Grid size: <span id="value"></span> x <span id="value"></span></p>
           </div>
+          <div class="eraser-container">
+            <button id="btn">Eraser</button>
+          </div>
+          <div class="clear-container">
+            <button id="btn">Clear</button>
+          </div>
         </div>
         <div class="grid-wrapper">
           <div class="grid-container">
