--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Etch-a-Sketch</title>
+    <title>Pixel Pro</title>
     <script src="eas.js" defer></script>
     <link rel="stylesheet" href="eas.css" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1>Etch-a-Sketch</h1>
+        <h1>Pixel Pro</h1>
       </header>
       <main class="main">
         <div class="settings">
